@@ -18,11 +18,16 @@ Whether you're a bioinformatics researcher, a scientist, or a student, IPROFIN i
 - JDK 19+
 - JavaFX 19
 
-Download The trained SVM model for the localization prediction form:  
+- Download IPROFIN.zip from the releases. 
+
+- Download The trained SVM model for the localization prediction form:  
 https://1drv.ms/f/s!AmL9JchooXjA6BWxH5hLz4400hGX?e=hr0fBZ 
 copy it to the main folder. 
-Next, download the model for SignalP6 from the link: https://mega.nz/file/uZ0DVQ7b#oDDerv_8mJmj1ypC_CX8OaWBxfYe4dXDvHGVgOiwCks
+
+- Download the model for SignalP6 from the link: https://mega.nz/file/uZ0DVQ7b#oDDerv_8mJmj1ypC_CX8OaWBxfYe4dXDvHGVgOiwCks
 and copy it to "./IPROFIN/src/model/signalP/venv/lib/python3.9/site-packages/signalp/model_weights/".
+
+- (TMP!) Load now the project in IntelliJ and add the VM options to the main class IProFin.java "--module-path PATH_TO/javafx-sdk-19/lib --add-modules=javafx.swing,javafx.graphics,javafx.fxml,javafx.media,javafx.web"
 
 
 ## Used Tools
